  * allow more userfriendly input for calibSample()
  * calibSample() can be applied to objects of class 'synthPopObj'
  * updated example for ipu
  * whipple index (original and modified) included
  * sprague index included
  * simInitSpatial() to generate districts from a broader region
  * dataObj-methods for covWt() and corWt()
  * dataObj-methods for meanWt() and varWt()

Changes in synthPop version 0.1.8
  * remove S3-class spBwplot() -> only default method was implemented. Removed option to supply a list of populations; rewritten to use 'synthPopObj'-objects

  * fixed man files for spBwplot() and spBwplotStats()

  * updated calibPop() so that the function uses and returns objects of class 'synthPopObj'

  * auxData()-methods to query/set 'sample' slot in 'synthPopObj'-objects

Changes in synthPop version 0.1.7
  * parallel-computing on windows-platforms using doParallel-package

  * removed spTable.formula method (did not work correctly, anyway)

  * parallel processing on windows using doParallel-package and foreach with %dopar%

  * fixed a problem in calibPop.cpp where export of params-object in a list was not done correctly

  * refactorization of calibPop.R to allow parallel computing

Changes in synthPop version 0.1.6
  * removed method 'ctree' from simCategorical() -> perhaps add it later

  * removed argument 'basic' from simCategorical(). The function now uses variables listed in slot @basicHHvars of the input object of class 'synthPopObj'.

  * made check that slot basicHHvars after simStructure() contains at least one variable.

  * new utility-function manageSynthPopObj() to get/set variables in objects of class 'synthPopObj'
  * updated a lot of Rd-Files with (now) working examples

  * updated simEUSILC()

Changes in synthPop version 0.1.5
  * combined classes 'sampleObj' and 'popObj' into 'dataObj'

  * renamed specify_sample() to specifyInput()

  * adjusted NAMESPACE files, documentation and functions to reflect these changes
